<resources>
    <string name="app_name">LIMKOKram</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    
    <string name="register">Register</string>
    <string name="or">Or</string>

    <string name="pleaseEnterUsername">Please enter your Username</string>
    <string name="pleaseEnterPassword">Please enter your Password</string>

    <string name="welcome">Welcome to LIMKOKram</string>

    <string name="loginFail">In case you do not have an account please sign up,, otherwise your password or username is incorrect</string>
    <string name="sorryEmail">Sorry you need to provide an Email</string>
    <string name="sorryUsername">Sorry you need to provide a Username</string>
    <string name="sorryPassword">Sorry you need to provide a password and confirm it</string>
    <string name="sorryPasswordConfirm">Sorry your passwords should be identical</string>
    <string name="wait">Please wait...</string>
    <string name="somethingWentWrong">Something went wrong please try again</string>
    <string name="selfie">Selfie</string>
    <string name="profile">Profile</string>
    <string name="user">Username : </string>
    <string name="profilePicture">Profile Picture</string>
    <string name="youTook">You took 0 Selfie</string>
    <string name="info">Please use the Image Icon to change your profile picture</string>
    <string name="notPickedImage">You have not picked an image</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="noCamera">Sorry sounds like you do not have a camera</string>
    <string name="notTookSelfie">you have not taken a selfie</string>
    <string name="album_name">LIMKOKram</string>
    <string name="tookAselfie">took a Selfie</string>
    <string name="comment">Comment</string>
    <string name="heart">Heart</string>
    <string name="peopleWhoLovedIt">People who loved it are:</string>
    <string name="ok">Ok</string>
    <string name="yt">took</string>
    <string name="selfies">Selfies</string>
    <string name="youtook">You took</string>
    <string name="writeAcomment">Write a comment</string>
    <string name="noComment">You have not written a comment</string>

</resources>

