<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/limkokwingLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/download"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limkokwingLogo">

        <RelativeLayout
            android:id="@+id/relativeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginTop="30dp"


                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:drawableLeft="@drawable/ic_username"
                android:gravity="bottom|center"
                android:textSize="22sp"
                />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"


                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_pwd"
                android:gravity="bottom|center"
                android:textSize="22sp"
                android:layout_below="@+id/editTextUsername"

                />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"

               />
            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_below="@+id/loginButton"
                android:textSize="22sp"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/or"
                android:background="@drawable/button_shape"
                android:text="@string/signup"
                android:textSize="22sp"
                android:textColor="@color/white"

                android:layout_marginBottom="10dp"
                android:onClick="goToSignup"/>

        </RelativeLayout>
        </ScrollView>

</RelativeLayout>
