<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/limkokwingLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/download"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limkokwingLogo">

        <RelativeLayout
            android:id="@+id/relativeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextUsernameSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginTop="30dp"


                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:drawableLeft="@drawable/ic_username"
                android:gravity="bottom|center"
                android:textSize="22sp"
                />
            <EditText
                android:id="@+id/editTextPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"


                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_pwd"
                android:gravity="bottom|center"
                android:textSize="22sp"
                android:layout_below="@+id/editTextUsernameSignup"
                />

            <EditText
                android:id="@+id/editTextConfirmPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"


                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_pwd"
                android:gravity="bottom|center"
                android:textSize="22sp"
                android:layout_below="@+id/editTextPasswordSignup"
                />
            <EditText
                android:id="@+id/editTextEmailSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"

                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/email"
                android:gravity="bottom|center"
                android:textSize="22sp"
                android:layout_below="@+id/editTextConfirmPasswordSignup"
                />
            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEmailSignup"
                android:background="@drawable/button_shape"
                android:text="@string/register"
                android:textSize="22sp"
                android:textColor="@color/white"

                android:layout_marginTop="10dp"


                android:layout_marginBottom="10dp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>